--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,22 @@ shodan==1.31.0
 
 # Optional - developer tooling
 flake8==6.1.0
+# requirements.txt for info_gathering_v2.py
+# Minimal required packages. Adjust versions if needed.
+
+requests>=2.28.1
+dnspython>=2.4.2
+python-whois>=0.7.3
+shodan>=1.28.0
+certifi>=2023.5.7
+
+# Optional / convenience
+python-nmap>=0.7.1  # optional: integrate with nmap if installed
+python-dotenv>=1.0.0  # optional: load SHODAN_API_KEY from .env
+
+# Pin exact versions for reproducible environments if you want
+# Example (commented):
+# requests==2.31.0
+# dnspython==2.4.2
+# python-whois==0.7.3
+# shodan==1.28.0
