--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ shodan==1.31.0
 
 # Optional - developer tooling
 flake8==6.1.0
-# requirements.txt for info_gathering_v2.py
+
+# requirements.txt for info_gathering.py
 # Minimal required packages. Adjust versions if needed.
 
 requests>=2.28.1
@@ -21,7 +22,7 @@ python-dotenv>=1.0.0  # optional: load SHODAN_API_KEY from .env
 
 # Pin exact versions for reproducible environments if you want
 # Example (commented):
-# requests==2.31.0
-# dnspython==2.4.2
-# python-whois==0.7.3
-# shodan==1.28.0
+ requests==2.31.0
+ dnspython==2.4.2
+ python-whois==0.7.3
+ shodan==1.28.0
